# aegis-dashboard

./: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  README.md  check_balance.py  config.yaml  create_better_test_images.py  create_extreme_disaster.py  create_test_image.py  deploy-vercel.bat  deploy-vercel.sh  deploy.bat  deploy.sh  docker-compose.yml  heroku-deploy.md  quick_blockchain_test.py  requirements.txt  run.py  test_blockchain.py  test_complete_success.py  test_disaster_detection.py  test_extreme_disaster.py  test_real_transaction.py  test_simple_transaction.py  test_with_lower_thresholds.py  test_working_transaction.py  vercel-deploy.md  vercel-requirements.txt  vercel.json
api/: index.py
disaster_management_system/: __init__.py
disaster_management_system/agents/: __init__.py  auditor.py  treasurer.py  watchtower.py
docker/: Dockerfile.auditor  Dockerfile.orchestrator  Dockerfile.treasurer  Dockerfile.watchtower
frontend/: README.md  app.py  index.html  script.js  start_real_transactions.bat  style.css  vercel_app.py
scripts/: setup.bat  setup.sh
test_images/: README.md
tests/: __init__.py
weilchain-counter/: Cargo.toml  DEPLOYMENT.md  README.md  demo.js  deploy.toml
weilchain-counter/mcp-server/: Cargo.toml
weilchain-counter/mcp-server/src/: main.rs
weilchain-counter/scripts/: deploy.sh  interact.sh
weilchain-counter/src/: lib.rs
weilchain-counter/tests/: integration_test.rs
weilchain-counter/typescript/: package.json
weilchain-counter/typescript/src/: counter.ts
(+16 files in other folders)
