[package]
name = "counter-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# These would be actual Weilchain MCP SDK dependencies:
# weilchain-mcp = "0.1.0"
# weilchain-client = "0.1.0"